platform/fundamentals/ingress/argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.localhost`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
