platform/fundamentals/ingress/gitea.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http
  namespace: gitea
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitea.localhost`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
