platform/fundamentals/ingress/longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.localhost`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
